Footer is not showing up on phone, trying to fix it

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,10 +11,12 @@
 
 html {
     height: 100%;
+    height: 100dvh; /* Add this for mobile */
 }
 
 body {
     height: 100%;
+    height: 100dvh; /* Add this for mobile */
     margin: 0;
     padding: 0;
     color: var(--foreground);
