--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,12 +1,12 @@
 .wrapper {
-    height: 100vh;
+    min-height: 100vh; 
+    min-height: 100dvh; 
     display: flex;
     flex-direction: column;
-    overflow: hidden;
 }
 
 .main {
-    flex: 1;
+    flex: 1 0 auto;
     overflow-y: auto;
     padding: 2rem;
 }
